--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left-logo">
+            Header Logo
+        </div>
+        <div class="right-links">
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </div>
+    </div>
+    <div class="hero-area">
+        <div class="hero-info">
+            <p class="maintitle">This website is awesome</p>
+            <p class="secondtitle">Some information that goes under the main title. Smaller font and lower contrast.Some information that goes under the main title. Smaller font and lower contrast.</p>
+            <div id="button">Sign Up</div>
+        </div>
+        <div class="hero-image">
+
+        </div>
+    </div>
+    <div class="plain-area">x</div>
 </body>
 </html>
