--- a/index.html
+++ b/index.html
@@ -11,22 +11,49 @@
             Header Logo
         </div>
         <div class="right-links">
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <a href="#">shop by brand</a>
+            <a href="#">shop by style</a>
+            <a href="#">blogs</a>
         </div>
     </div>
     <div class="hero-area">
+        <div class="hero-image">
+            <img src="images/hero-image.webp">
+        </div>
         <div class="hero-info">
-            <p class="maintitle">This website is awesome</p>
-            <p class="secondtitle">Some information that goes under the main title. Smaller font and lower contrast.Some information that goes under the main title. Smaller font and lower contrast.</p>
+            <p class="maintitle">New Winter Collections</p>
+            <p class="secondtitle">Everything you need to know and shop this winter, from current trends, styling tips, outfit ideas, and more.</p>
             <div id="button">Sign Up</div>
         </div>
-        <div class="hero-image">
-
-        </div>
+        
     </div>
-    <h1>Brands Available</h1>
+    <h1 id="information-header-text">Brands Available</h1>
+    <div class="brand-images">
+        <a href="#">
+            <div class="brand-card">
+                <img src="images/balenciaga-hoodie.jpeg">
+                <p>Balenciaga</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="brand-card">
+                <img src="images/gap-hoodie.jpg">
+                <p>Gap</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="brand-card">
+                <img src="images/levis shirt.jpg">
+                <p>Levi's</p>
+            </div>
+        </a>
+        <a href="#">
+            <div class="brand-card">
+                <img src="images/lv-shoes.jpg">
+                <p>Louis Vuitton</p>
+            </div>
+        </a>
+    </div>
     <div class="plain-area">x</div>
 </body>
 </html>
