added a quote section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             </div>
         </a>
     </div>
+    <div class="quote-area">
+        <p id="quote"><em>Style is the only thing you can’t buy. It’s not in a shopping bag, a label, or a price tag. It’s something reflected from our soul to the outside world—an emotion.</em></p>
+        <p id="quote-author">- Alber Elbaz</p>
+    </div>
     <div class="plain-area">x</div>
 </body>
 </html>
