--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
         <p id="quote"><em>Style is the only thing you can’t buy. It’s not in a shopping bag, a label, or a price tag. It’s something reflected from our soul to the outside world—an emotion.</em></p>
         <p id="quote-author">- Alber Elbaz</p>
     </div>
-    <div class="plain-area">x</div>
+    <div class="action-card">
+        <div class="text">
+            <h2>Call to Action! It's time!</h2>
+            <p>Sign up for our newsletter by clicking that button over there.</p>
+        </div>
+        <div class="button">
+            <a href="#">Sign Up</a>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © Ashin Sabu 2022
+    </div>
 </body>
 </html>
